--- a/css/anime/transform/translate.html
+++ b/css/anime/transform/translate.html
@@ -5,12 +5,12 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>RotateY</title>
+    <title>Scalee</title>
 <style type="text/css">
 
     #item{
         /** ADD COD HERE **/
-        transform: rotateY(.2turn)
+        transform: translate(-20px,50px);
     }
     /*======================== DO NOT EDIT BELOW================*/
     #container{
@@ -40,7 +40,7 @@
 </head>
 <body>
 <div id='container'>
-    <div = id='item'>Box</div>
+    <div id='item'>Box</div>
 </div>
 
 </body>
