--- a/css/anime/transform/rotate-z.html
+++ b/css/anime/transform/rotate-z.html
@@ -10,7 +10,7 @@
 
     #item{
         /** ADD COD HERE **/
-        transform: rotateY(.2turn)
+        transform: rotate(30deg);
     }
     /*======================== DO NOT EDIT BELOW================*/
     #container{
@@ -40,7 +40,7 @@
 </head>
 <body>
 <div id='container'>
-    <div = id='item'>Box</div>
+    <div id='item'>Box</div>
 </div>
 
 </body>
