--- a/css/anime/transform/translate-override.html
+++ b/css/anime/transform/translate-override.html
@@ -5,12 +5,15 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>RotateY</title>
+    <title>Scalee</title>
 <style type="text/css">
 
-    #item{
+    .item{
+        transform: translateX(50px) scale(3) rotate(20deg);
+    }
+    .small{
         /** ADD COD HERE **/
-        transform: rotateY(.2turn)
+        transform:  translateX(50px) scale(.5) rotate(20deg);
     }
     /*======================== DO NOT EDIT BELOW================*/
     #container{
@@ -20,7 +23,7 @@
         height: 100vh;
         background-image: linear-gradient(orange,yellow);
     }
-    #item{
+    .item{
         border: 4px solid black;
         background-color: blue;
         width: 100px;
@@ -40,7 +43,7 @@
 </head>
 <body>
 <div id='container'>
-    <div = id='item'>Box</div>
+    <div class='item small'>Box</div>
 </div>
 
 </body>
